# prethinker

./: .gitignore  AGENT-README.md  CLAUDE-WORK.md  CODE-HANDOFF.md  CODEX_IDE_HANDOFF.md  Chatgpt Ideas.md  EXPLAINER.md  GOLDILOCKS_ROUNDTRIP_REPORT.md  NEXT-CODEX.md  NEXT_GO_PRETHINK_CONTROL_PLANE_PLAN.md  PROJECT_STATE.md  README.md  ROADMAP.md  SESSIONS.md  Semantic Parsing.md  codex-state.json  ingest_frontend.py  kb_pipeline.py  pyproject.toml
archives/: COMEBACK_NOTE_2026-05-03.md  README.md  prethinker-history-20260412T025145Z.metadata.json
docs/: ACH_OVERLAY_PROBE.md  ACH_STRESS_PUBLIC_20260528_WORKSHEET.md  ACTIVE_RESEARCH_LANES.md  ARTIFACT_UNIT_AND_HELPER_CLASSIFICATION.md  AUDIT_GRAMMAR_MEASUREMENT_NOTE.md  AUDIT_GRAMMAR_TECHNICAL_NOTE.md  AUTOLAB.md  AUTOLAB_AGENT_SKILL_EVOLUTION.md  AUTOLAB_OPERATING_MODEL.md  AUTOLAB_WINDOWS_DIRECT.md  BENCHMARKING_RESEARCH_JOURNAL.md  BENCHMARK_PUBLICATION_PLAN.md  BOUNDARY_HUNT_WORKSHEET.md  BOUNDARY_PROBE_RESEARCH_METHOD.md  CANDIDATE_ORACLE_REVIEW_STATUS.md  CHAOS_PROVER_PATTERN_NOTES.md  CLARIFICATION_EAGERNESS_STRATEGY.md  CLOSED_DOMAIN_PREDICATE_PACKS_TECHNICAL_NOTE.md  CODEX_HANDOVER_20260506.md  COLD_BASELINE_FAILURE_ROLLUP.md  COMPILED_KB_ARTIFACT_PACKAGE.md  COMPILE_STABILITY_SURFACE_WORKSHEET.md  COMPILE_SURFACE_STABILITY_WORKSHEET.md  COMPILING_LANGUAGE.md  CONSOLE_TRYBOOK.md  CONTEXT_CONTROL_ARCHITECTURE_BRIEF.md  COURTLISTENER_CACHE_PROVENANCE_STATUS.md  COURTLISTENER_DOMAIN.md  CROSS_FIXTURE_REPAIR_SLICES.md  CTO_ARCHITECTURE_BRIEF.md  CURRENT_COMPILE_FACT_QA_STATUS.md  CURRENT_HARNESS_INSTRUMENT.md  (+138 more)
(+4221 files in other folders)
